--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 
 .DS_Store
 *.psd
+img/branding/rotting-research-clay-imac-27-mockup-display-close-up-3k.psd
+img/branding/rotting-research-clay-macbook-pro-15-with-touch-bar-front-view-mockup-crop.psd
